tests/NormalTests/paczka1/small_fuzzy/79322935.err
Error in line 2: WsPy0 S321 15,59
Error in line 3: DOkC A749 55,1
Error in line 12: 8LrQfoK3 S321 70,6
Error in line 14: 8LrQfoK3 A749 44,2
